<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="TcoDigitalInspectorData" Id="{cd575c1e-dcb1-0a06-301a-c160533158aa}">
    <Declaration><![CDATA[{attribute addProperty Name "LogicCheckerData"}
{attribute 'qlik_entity:Checks'}
{attribute 'qlik_ref_value_field:CheckName = AttributeHumanReadable'}
{attribute 'qlik_ref_value_field:StationName = AttributeQlikGroup'}
{attribute 'qlik_value_field:CheckType = Logic'}
TYPE TcoDigitalInspectorData :
STRUCT
	{attribute addProperty Name "<#TIME STAMP#>"}
	{attribute clr [RenderIgnore("Control", "ShadowControl")]}	
	{attribute 'qlik_load:TimeStamp'}
	TimeStamp : DT;			// Time stamp of the check.	
	
	{attribute addProperty Name "<#REQUIRED STATUS#>"}
	{attribute 'qlik_load:RequiredStatus'}	
	RequiredStatus : BOOL;	// Required status for the check to Pass.
	
	{attribute addProperty Name "<#DETECTED STATUS#>"}	
	{attribute clr [RenderIgnore("Control", "ShadowControl")]}
	{attribute 'qlik_load:DetectedStatus'}	
	DetectedStatus : BOOL;	// Detected status.
	
	{attribute addProperty Name "<#STAB. TIME#>"}
	{attribute 'qlik_load:PassedTime'}	
	PassedTime : TIME;		// Passed time. Elapses when the measured value is within Minimum and Maximum. When time elapses with given condition the test is Passed.
	
	{attribute addProperty Name "<#TIMEOUT FAIL#>"}
	{attribute 'qlik_load:FailedTime'}
	FailedTime : TIME;		// Failed time. Elapses during entire duration of measurement. When time elapses before PassedTime the test is Failed.
	
	{attribute addProperty Name "<#RESULT#>"}
	{attribute clr [RenderIgnore("Control", "ShadowControl")]}
	{attribute 'qlik_load:Result'}	
	Result : eInspectorResult;	// Holds result of the check.
	
	{attribute addProperty Name "<#EXCLUDE CHECK#>"}
	{attribute 'qlik_load:IsExcluded'}
    IsExcluded : BOOL;			// If TRUE the check is excluded. The hadnling of this exclusion should be handled in user code.
	
	{attribute addProperty Name "<#BYPASS PROCESS#>"}
	{attribute 'qlik_load:IsByPassed'}
    IsByPassed : BOOL;			// If TRUE the check is to be bypassed. The hadnling of this exclusion shoudl be handled in user code.
	
	{attribute addProperty Name "<#FAILURE DESCRIPTION#>"}
	{attribute 'qlik_ignore'}
	FailureDescription : STRING(100);	
	
	{attribute addProperty Name "<#MAX.RETRY COUNT#>"}
	{attribute 'qlik_load:NumberOfAllowedRetries'}
	NumberOfAllowedRetries : UINT;
	
	{attribute addProperty Name "<#RETRIES#>"}
	{attribute 'qlik_load:RetryAttemptsCount'}
	RetryAttemptsCount : UINT;
	
	{attribute addProperty Name "<#ERROR CODE#>"}
	{attribute 'qlik_load:ErrorCode'}
	ErrorCode : STRING(20);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>