<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="eCheckSteps" Id="{b85ba7f0-9477-05c0-240c-9fa48fe43f01}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eCheckSteps :
(
	Initialisation := 0,
	WatingForStart := 1,
	Checking := 2,
	Evaluating := 3,
	Reporting := 4,
	Done := 5
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>